--- a/views/result-first.ejs
+++ b/views/result-first.ejs
@@ -16,9 +16,9 @@
       </div>
     </header>
     <div class="page-top">
-      <h1 class="page-top-title">Quarto</h1>
-      <p class="page-top-subtitle">クアルト</p>
-      <a href="/playground" class="btn btn-flat"><span>スタート</span></a>
+      <h1 class="page-top-title">Player1</h1>
+      <p class="page-top-subtitle">Win!</p>
+      <a href="/playground" class="btn btn-flat"><span>リスタート</span></a>
     </div>
   </body>
   <script src="/socket.io/socket.io.js"></script>
